add apiVersion to tables, remove duplicate download endpoint, update swagger.
